fonts && initial components

--- a/src/styles.less
+++ b/src/styles.less
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+@import 'assets/fonts/fonts.less';
+
+* {
+	font-family: 'Roboto';
+	padding: 0;
+	margin: 0;
+}
+
+body {
+	margin:0;
+	background: #e2e1e0;
+}
