--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -1,3 +1,8 @@
-<p>
-  feed works!
-</p>
+<div class="feed">
+  <div class="feed__item">
+    <app-feed-item-news></app-feed-item-news>
+  </div>
+  <div class="feed__item">
+    <app-feed-item-transaction></app-feed-item-transaction>
+  </div>      
+</div>
