--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -1,8 +1,9 @@
 <div class="feed">
   <div class="feed__item">
-    <app-feed-item-news></app-feed-item-news>
+    <!-- <app-item-news></app-item-news> -->
   </div>
-  <div class="feed__item">
-    <app-feed-item-transaction></app-feed-item-transaction>
-  </div>      
+  <app-item-transaction></app-item-transaction>
+  <app-item-transaction></app-item-transaction>
+  <app-item-transaction></app-item-transaction>
+  <app-item-transaction></app-item-transaction>
 </div>
