--- a/src/app/feed/item-transaction/item-transaction.component.html
+++ b/src/app/feed/item-transaction/item-transaction.component.html
@@ -1,8 +1,8 @@
 <div class="item-transaction">
-  <div class="item-transaction__icon">
-  </div>
-  <div class="item-transaction__desc">Чашечка кофэ</div>
+  <app-icon icon="icon-coffee" class="item-transaction__icon"></app-icon>
+  <div class="item-transaction__desc">Starbucks</div>
   <div class="item-transaction__amount">
     -100
   </div>
+  <app-icon icon="icon-rouble" class="item-transaction__currency-icon"></app-icon>
 </div>
