--- a/src/app/feed/item-transaction/item-transaction.component.less
+++ b/src/app/feed/item-transaction/item-transaction.component.less
@@ -20,6 +20,8 @@
   }
 
   &__icon {
+    width: 30px;
+    height: 30px;
     margin-right: 15px;
     padding: 15px;
     background: #e2e1e0;
@@ -28,6 +30,12 @@
 
   &__amount {
     margin-left: auto;
+    margin-right: 0;
+  }
+
+  &__currency-icon {
+    width: 15px;
+    height: 15px;
     margin-right: 0;
   }
 }
