--- a/src/app/feed/item-transaction/item-transaction.component.less
+++ b/src/app/feed/item-transaction/item-transaction.component.less
@@ -1,3 +1,5 @@
+@import '../../colors.less';
+
 .item-transaction {
   margin: 0 auto;
   margin-bottom: 10px;
@@ -6,7 +8,7 @@
   max-width: 400px;
   min-height: 50px;
   padding: 15px;
-  background: #fff;
+  background: @color-primary-1;
   border-radius: 5px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
@@ -24,7 +26,7 @@
     height: 30px;
     margin-right: 15px;
     padding: 15px;
-    background: #e2e1e0;
+    background: @color-primary-0;
     border-radius: 50%;
   }
 
@@ -37,5 +39,13 @@
     width: 15px;
     height: 15px;
     margin-right: 0;
+  }
+
+  &--outcome {
+    background: @color-secondary-2-1;
+  }
+
+  &--outcome &__icon {
+    background: @color-secondary-2-0;
   }
 }
