--- a/src/styles/colors.less
+++ b/src/styles/colors.less
@@ -1,23 +1,23 @@
-@color-primary-0: #5eaff2; // Main Primary color */
-@color-primary-1: #f3f9fe;
-@color-primary-2: #9bccf6;
-@color-primary-3: #2695f2;
-@color-primary-4: #0284f0;
+@color-primary-0: #5195db; // Main Primary color */
+@color-primary-1: #e3f0fd;
+@color-primary-2: #8bbbed;
+@color-primary-3: #2171c5;
+@color-primary-4: #094583;
 
-@color-secondary-1-0: #6977f4; // Main Secondary color (1) */
-@color-secondary-1-1: #f4f5fe;
-@color-secondary-1-2: #a2abf7;
-@color-secondary-1-3: #3548f3;
-@color-secondary-1-4: #041bf2;
+@color-secondary-1-0: #665ce0; // Main Secondary color (1) */
+@color-secondary-1-1: #e7e5fd;
+@color-secondary-1-2: #9a93ef;
+@color-secondary-1-3: #3a2ecc;
+@color-secondary-1-4: #1b128c;
 
-@color-secondary-2-0: #53f3c7; // Main Secondary color (2) */
-@color-secondary-2-1: #f2fefb;
-@color-secondary-2-2: #95f6db;
-@color-secondary-2-3: #17f2b6;
-@color-secondary-2-4: #00f0ae;
+@color-secondary-2-0: #46ddab; // Main Secondary color (2) */
+@color-secondary-2-1: #e1fdf4;
+@color-secondary-2-2: #83eecb;
+@color-secondary-2-3: #14c78c;
+@color-secondary-2-4: #00865a;
 
-@color-complement-0: #ffb857; // Main Complement color */
-@color-complement-1: #fffaf3;
-@color-complement-2: #ffd59a;
-@color-complement-3: #ff9e19;
-@color-complement-4: #ff9400;
+@color-complement-0: #ffb951; // Main Complement color */
+@color-complement-1: #fff4e3;
+@color-complement-2: #ffd18d;
+@color-complement-3: #ffa319;
+@color-complement-4: #c97800;
