button styles & news component & header

--- a/src/app/feed/item-news/item-news.component.html
+++ b/src/app/feed/item-news/item-news.component.html
@@ -1,4 +1,4 @@
-<p>
-  feed-item-news works!
-  {{news.title}}
-</p>
+<div class="item-news">
+  <div class="item-news__pre-header">{{news.date | date:'dd.LL.yy HH:mm'}}</div>
+  <div class="item-news__header" snEllipsis>{{news.title}}</div>
+</div>
