--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -1,4 +1,5 @@
 <div class="feed">
   <app-item-transaction *ngFor="let transaction of transactions" [transaction]="transaction" [selected]="transaction.id === selectedTransaction"
     (click)="selectedTransaction = transaction.id"></app-item-transaction>
+  <app-item-news *ngFor="let newsItem of news" [news]="newsItem"></app-item-news>
 </div>
