--- a/src/app/feed/item-transaction/item-transaction.component.less
+++ b/src/app/feed/item-transaction/item-transaction.component.less
@@ -2,8 +2,8 @@
 @import '../../../styles/variables.less';
 
 .item-transaction {
-  max-width: 400px;
-  margin: 0 auto;
+  // max-width: 400px;
+  // margin: 0 auto;
   margin-top: @baseOffset5x;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   transition: all 0.5s cubic-bezier(0.25, 0.8, 0.25, 1);
@@ -93,27 +93,4 @@
   &--outcome &-content {
     background: @color-secondary-2-0;
   }
-}
-
-.item-button {
-  padding: 8px 12px;
-  border: 1px solid @color-primary-1;
-  background-color: transparent;
-  border-radius: 3px;
-  color: @color-primary-1;
-  outline: none;
-  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-
-  &:hover {
-    background-color: @color-complement-2;
-    border-color: @color-complement-1;
-    color: @color-complement-1;
-    font-weight: bold;
-  }
-}
-
-.item-transaction-content--outcome .item-button {
-  // background-color: @color-secondary-2-1;
-  border-color: @color-secondary-2-1;
-  color: @color-secondary-2-1;
 }
