modal service && modal background

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
+<app-modal id="custom-modal-1">
+  <h1>A Custom Modal!</h1>
+</app-modal>
 <app-header></app-header>
 <div class="wrapper">
   <app-feed></app-feed>
