--- a/src/app/_components/modal/modal.component.less
+++ b/src/app/_components/modal/modal.component.less
@@ -1,15 +1,24 @@
 .app-modal {
   position: fixed;
   z-index: 1000;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  overflow: auto;
+  top: 50%;
+  left: 50%;
+  display: none;
+  width: 800px;
+  max-width: 100%;
+  height: 400px;
+  max-height: 100%;
+  transform: translate(-50%, -50%);
+
+  &--active {
+    display: block;
+  }
 
   &-body {
+    overflow: auto;
+    height: 100%;
     padding: 20px;
-    margin: 40px;
+    margin: 0 auto;
     background: #fff;
     opacity: 1;
   }
@@ -21,6 +30,7 @@
     right: 0;
     bottom: 0;
     left: 0;
+    display: none;
     background-color: #000;
     opacity: 0.75;
   }
