--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="header">
   <div class="header__title">Feed-angular-app</div>
   <div class="header__controls">
-    <app-button label="Добавить событие" appearance="flatten-primary"></app-button>
+    <app-button label="Добавить событие" appearance="flatten-primary" (onClick)="openAddModal()"></app-button>
   </div>
 </div>
