--- a/src/app/_components/modal/modal.component.less
+++ b/src/app/_components/modal/modal.component.less
@@ -1,37 +1,64 @@
+@import '../../../styles/variables.less';
+
 .app-modal {
   position: fixed;
   z-index: 1000;
   top: 50%;
   left: 50%;
-  display: none;
   width: 800px;
   max-width: 100%;
   height: 400px;
   max-height: 100%;
+  padding: 20px;
+  margin: 0 auto;
+  background: #fff;
+  border-radius: @globalRadius;
+  opacity: 1;
   transform: translate(-50%, -50%);
+  transition: all 3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  visibility: hidden;
 
   &--active {
-    display: block;
+    visibility: visible;
+  }
+
+  &-header {
+    display: flex;
+
+    &__title {
+      margin-bottom: @baseOffset4x;
+      font-size: 20px;
+      font-weight: bold;
+    }
+
+    // &__control-close {
+    //   width: 22px;
+    //   height: 22px;
+    //   margin-right: 0;
+    //   margin-left: auto;
+    // }
   }
 
   &-body {
     overflow: auto;
     height: 100%;
-    padding: 20px;
-    margin: 0 auto;
-    background: #fff;
-    opacity: 1;
   }
+}
 
-  &-background {
-    position: fixed;
-    z-index: 900;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    display: none;
-    background-color: #000;
+.app-modal-overlay {
+  position: fixed;
+  z-index: 900;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: #000;
+  opacity: 0;
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  visibility: hidden;
+
+  &--active {
     opacity: 0.75;
+    visibility: visible;
   }
 }
