modal & form-group & input

--- a/src/app/_components/button/button.component.less
+++ b/src/app/_components/button/button.component.less
@@ -3,7 +3,7 @@
 
 .app-button {
   padding: @baseOffset2x @baseOffset3x;
-  border-radius: 3px;
+  border-radius: @smallGlobalRadius;
   outline: none;
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 
