--- a/src/app/modals/add-event-modal/add-event-modal.component.html
+++ b/src/app/modals/add-event-modal/add-event-modal.component.html
@@ -1,3 +1,3 @@
-<p>
-  add-event-modal works!
-</p>
+<app-modal id="add-event" title="Добавить событие">
+  <app-add-transaction-form></app-add-transaction-form>
+</app-modal>
