--- a/src/app/_components/modal/modal.component.less
+++ b/src/app/_components/modal/modal.component.less
@@ -5,10 +5,11 @@
   z-index: 1000;
   top: 50%;
   left: 50%;
-  width: 800px;
+  // width: 800px;
   max-width: 100%;
   height: 400px;
   max-height: 100%;
+  box-sizing: content-box;
   padding: 20px;
   margin: 0 auto;
   background: #fff;
@@ -42,6 +43,7 @@
   &-body {
     overflow: auto;
     height: 100%;
+    box-sizing: content-box;
   }
 }
 
