input & select form components

--- a/src/app/_components/input/input.component.html
+++ b/src/app/_components/input/input.component.html
@@ -1,1 +1,1 @@
-<input type="text" class="form-input" id="alterEgo">
+<input class="form-input" type="{{type}}" (keyup)="writeValue($event.target.value)">
