--- a/src/app/forms/add-transaction-form/add-transaction-form.component.less
+++ b/src/app/forms/add-transaction-form/add-transaction-form.component.less
@@ -1,5 +1,18 @@
-.add-event {
-  display: flex;
+.add-transaction-form {
+  display: block;
   width: 400px;
   flex-direction: column;
+
+  &__price-row {
+    display: flex;
+
+    &__amount {
+      width: 300px;
+      margin-right: 20px;
+    }
+
+    &__currency {
+      width: 80px;
+    }
+  }
 }
