select outerclick & select categories

--- a/src/app/_components/input/input.component.html
+++ b/src/app/_components/input/input.component.html
@@ -1,1 +1,1 @@
-<input class="form-input" type="{{type}}" (keyup)="writeValue($event.target.value)">
+<input class="form-input" type="{{type}}" (keyup)="writeValue($event.target.value)" [value]="value">
