--- a/src/app/_components/select/select.component.less
+++ b/src/app/_components/select/select.component.less
@@ -32,13 +32,14 @@
 
   &__dropdown {
     position: absolute;
+    z-index: 1000;
     right: -1px;
     left: -1px;
     overflow: hidden;
     max-height: 144px;
     border: 1px solid @color-primary-0;
     border-top: none;
-    margin-top: @baseOffset;
+    margin-top: @baseOffset2x;
     background-color: #fff;
     border-bottom-left-radius: @smallGlobalRadius;
     border-bottom-right-radius: @smallGlobalRadius;
