--- a/src/app/_components/button/button.component.html
+++ b/src/app/_components/button/button.component.html
@@ -1,2 +1,5 @@
 <button class="app-button" [class.app-button-flatten-primary]="appearance ==='flatten-primary'"
-  [class.app-button-flatten-secondary-2]="appearance ==='flatten-secondary-2'" (click)="click()">{{label}}</button>
+  [class.app-button-flatten-secondary-2]="appearance ==='flatten-secondary-2'" [class.app-button-icon]="appearance ==='icon'"
+  (click)="click()">
+  <ng-content></ng-content>
+</button>
