--- a/src/app/_components/modal/modal.component.less
+++ b/src/app/_components/modal/modal.component.less
@@ -5,9 +5,8 @@
   z-index: 1000;
   top: 50%;
   left: 50%;
-  // width: 800px;
   max-width: 100%;
-  height: 400px;
+  min-height: 400px;
   max-height: 100%;
   box-sizing: content-box;
   padding: 20px;
@@ -17,11 +16,6 @@
   opacity: 1;
   transform: translate(-50%, -50%);
   transition: all 3s cubic-bezier(0.25, 0.8, 0.25, 1);
-  visibility: hidden;
-
-  &--active {
-    visibility: visible;
-  }
 
   &-header {
     display: flex;
@@ -32,12 +26,15 @@
       font-weight: bold;
     }
 
-    // &__control-close {
-    //   width: 22px;
-    //   height: 22px;
-    //   margin-right: 0;
-    //   margin-left: auto;
-    // }
+    &__control-close {
+      margin-right: 0;
+      margin-left: auto;
+
+      &__icon {
+        width: 20px;
+        height: 20px;
+      }
+    }
   }
 
   &-body {
@@ -55,12 +52,6 @@
   bottom: 0;
   left: 0;
   background-color: #000;
-  opacity: 0;
+  opacity: 0.75;
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-  visibility: hidden;
-
-  &--active {
-    opacity: 0.75;
-    visibility: visible;
-  }
 }
