--- a/src/app/forms/add-transaction-form/add-transaction-form.component.less
+++ b/src/app/forms/add-transaction-form/add-transaction-form.component.less
@@ -1,3 +1,6 @@
+@import '../../../styles/colors.less';
+@import '../../../styles/variables.less';
+
 .add-transaction-form {
   display: block;
   width: 400px;
@@ -14,5 +17,10 @@
     &__currency {
       width: 80px;
     }
+  }
+
+  &__control {
+    margin-top: @baseOffset2x;
+    float: right;
   }
 }
