--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -1,7 +1,7 @@
 <div class="feed">
   <ng-container *ngFor="let item of items">
     <app-item-transaction *ngIf="isTransaction(item)" [transaction]="item" [selected]="item.id === selectedItem"
-      (click)="selectedItem = item.id"></app-item-transaction>
+      (click)="selectedItem = item.id" (deletedTransaction)="deleteItem($event)"></app-item-transaction>
     <app-item-news *ngIf="isNews(item)" [news]="item" [selected]="item.id === selectedItem" (click)="selectedItem = item.id"></app-item-news>
   </ng-container>
 </div>
