--- a/src/app/feed/feed.component.less
+++ b/src/app/feed/feed.component.less
@@ -1,5 +1,7 @@
+@import '../../styles/variables.less';
+
 .feed {
   display: inline-block;
   width: 400px;
-  margin-top: 15px;
+  margin: @baseOffset4x 0;
 }
