--- a/src/app/feed/item-news/item-news.component.less
+++ b/src/app/feed/item-news/item-news.component.less
@@ -5,7 +5,7 @@
   max-width: 400px;
   padding: @baseOffset4x;
   margin: 0 auto;
-  margin-top: @baseOffset5x;
+  margin-bottom: @baseOffset5x;
   background: white;
   background: @color-complement-1;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
