close modal after submit

--- a/src/app/_components/modal/modal.component.html
+++ b/src/app/_components/modal/modal.component.html
@@ -1,7 +1,7 @@
 <div class="app-modal">
   <div class="app-modal-header">
     <div class="app-modal-header__title">{{title}}</div>
-    <app-button class="app-modal-header__control-close" appearance="icon">
+    <app-button class="app-modal-header__control-close" appearance="icon" (onClick)="close()">
       <app-icon class="app-modal-header__control-close__icon" icon="icon-close"></app-icon>
     </app-button>
   </div>
