--- a/src/app/_components/button/button.component.less
+++ b/src/app/_components/button/button.component.less
@@ -15,13 +15,19 @@
     font-weight: bold;
   }
 
+  &-primary {
+    border: 1px solid @color-primary-1;
+    background-color: @color-primary-0;
+    color: @color-primary-1;
+  }
+
   &-flatten-primary {
     border: 1px solid @color-primary-1;
     background-color: transparent;
     color: @color-primary-1;
   }
 
-  &-secondary-2 {
+  &-flatten-secondary-2 {
     border: 1px solid @color-secondary-2-1;
     background-color: transparent;
     color: @color-secondary-2-1;
