--- a/src/app/feed/item-news/item-news.component.less
+++ b/src/app/feed/item-news/item-news.component.less
@@ -5,11 +5,11 @@
   max-width: 400px;
   padding: @baseOffset4x;
   margin: 0 auto;
-  margin-bottom: @baseOffset5x;
+  margin-bottom: @baseOffset4x;
   background: white;
   background: @color-complement-1;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  transition: all 0.5s cubic-bezier(0.25, 0.8, 0.25, 1);
+  transition: all 0.5s ease-in-out(0.25, 0.8, 0.25, 1);
 
   &:hover {
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
