--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-add-event-modal></app-add-event-modal>
+<app-news-detailed-modal></app-news-detailed-modal>
 <app-header></app-header>
 <div class="wrapper">
   <app-feed></app-feed>
