--- a/src/app/feed/item-transaction/item-transaction.component.less
+++ b/src/app/feed/item-transaction/item-transaction.component.less
@@ -20,7 +20,7 @@
     display: flex;
     align-items: center;
     padding: @baseOffset4x;
-    background: @color-primary-1;
+    background: white;
 
     &__icon {
       width: 30px;
@@ -59,9 +59,9 @@
       font-size: 12px;
     }
 
-    &--outcome {
-      background: @color-secondary-2-1;
-    }
+    // &--outcome {
+    //   background: @color-secondary-2-1;
+    // }
 
     &--outcome &__icon {
       background: @color-secondary-2-0;
