--- a/src/app/_components/form/select/select.component.less
+++ b/src/app/_components/form/select/select.component.less
@@ -1,5 +1,5 @@
-@import '../../../styles/colors.less';
-@import '../../../styles/variables.less';
+@import '../../../../styles/colors.less';
+@import '../../../../styles/variables.less';
 
 .form-select {
   position: relative;
