--- a/src/app/modals/news-detailed-modal/news-detailed-modal.component.html
+++ b/src/app/modals/news-detailed-modal/news-detailed-modal.component.html
@@ -2,9 +2,8 @@
   <div class="news-detailed" *ngIf="selectedItem">
     <div class="news-detailed__date">{{selectedItem.date | date:'dd.LL.yy HH:mm'}}</div>
     <div class="news-detailed__content">{{selectedItem.content}}</div>
-    <div class="news-detailed__content">{{selectedItem.viewed}}</div>
     <div class="news-detailed__controls">
-      <app-button (click)="selectedItem.viewed = true">Ознакомлен</app-button>
+      <app-button (click)="setViewed(selectedItem)">Ознакомлен</app-button>
     </div>
   </div>
 </app-modal>
