--- a/src/app/feed/item-transaction/item-transaction.component.less
+++ b/src/app/feed/item-transaction/item-transaction.component.less
@@ -82,6 +82,8 @@
     &__desc {
       margin-top: @baseOffset;
       font-size: 13px;
+      text-overflow: ellipsis;
+      overflow: hidden;
     }
 
     &__controls-right {
