--- a/src/app/forms/add-transaction-form/add-transaction-form.component.html
+++ b/src/app/forms/add-transaction-form/add-transaction-form.component.html
@@ -21,7 +21,7 @@
     </div>
   </div>
   <app-form-group label="Описание">
-    <app-input formControlName="description"></app-input>
+    <app-textarea formControlName="description"></app-textarea>
   </app-form-group>
   <app-button class="add-transaction-form__control" type="submit">Добавить событие</app-button>
 </form>
